# GSE_99L_Integrated_Board_rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: krs_servo.rs  lib.rs  servo_control.rs
src/can/: health.rs  mod.rs  protocol.rs  tx.rs
src/tasks/: can_communication.rs  can_debug.rs  espnow.rs  mod.rs  servo.rs  status_led.rs  supervisor.rs
tests/: README.md  can_fire.rs  servo.rs  solenoid_ignition.rs
